# Intrusion-Detection-System

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IconsFontAwesome6.h  alert.h  camera.h  detect_person.h  main_window.h  select_area.h
lib/imgui/: CMakeLists.txt
src/: alert.cpp  camera.cpp  detect_person.cpp  main_window.cpp  select_area.cpp
